# rmk

./: .gitignore  Cargo.toml  README.md  memory.x
.cargo/: config.toml
configs/: dygma.yml
hid/: Cargo.toml  README.md
hid/src/: keycode.rs  lib.rs  report.rs
rmk/: Cargo.toml
rmk/src/: action.rs  keymap.rs  lib.rs  logger.rs  main.rs
src/: action.rs  keymap.rs  main.rs
