[package]
name = "rmk"
version = "0.1.0"
edition = "2021"
rust-version = "1.56" # Rust 2021

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.0"
cortex-m = "0.7"
usbd-serial = "0.1"
nrf52840-hal = "0.14"
embedded-hal = "0.2"
snafu = { version = "0.6", default-features = false }
rmk_hid = { path = "../hid" }
usbd-hid = "0.5"
usb-device = "0.2"
lazy_static = {version = "1", features = ["spin_no_std" ] }
log = { version = "0.4", default-features = false }
